--- a/src/input.css
+++ b/src/input.css
@@ -71,3 +71,8 @@
 .open .hamburger-bottom {
   transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
+
+
+.shadowed-section {
+  box-shadow: 0 24px 10px rgba(0, 0, 0, 0.25); /* This creates the shadow */
+}
